--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,19 @@
+buildscript {
+    repositories {
+        jcenter()
+    }
+}
+
 plugins {
+    id 'java-library'
     id 'java'
     id "io.qameta.allure" version "2.8.1"
+}
+
+ext {
+    allureVersion = "2.13.7"
+    selenideVersion = "5.16.2"
+    junitVersion = "5.7.0"
 }
 
 repositories {
@@ -12,22 +25,23 @@ tasks.withType(JavaCompile) {
 }
 
 allure {
+    version = "${allureVersion}"
     autoconfigure = true
-    version = '2.13.6'
-    useJUnit5{
-        version = '2.13.6'}
+    aspectjweaver = true
+    useJUnit5 {
+        version = "${allureVersion}"
+    }
 }
 
 test {
+//    systemProperties = System.properties
     useJUnitPlatform()
 }
 
 dependencies {
+    testImplementation "com.codeborne:selenide:${selenideVersion}"
+    testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
     testImplementation "com.github.javafaker:javafaker:1.0.2"
-
-    testImplementation 'com.codeborne:selenide:5.15.1'
-    testImplementation "org.junit.jupiter:junit-jupiter-api:5.7.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-engine:5.7.0"
-    testImplementation "org.junit.jupiter:junit-jupiter-params:5.7.0"
+    testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
+    testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
 }
-
