steps faker attachments allure remote

--- a/build.gradle
+++ b/build.gradle
@@ -34,7 +34,7 @@ allure {
 }
 
 test {
-    //systemProperties = System.properties
+    systemProperties = System.properties
     useJUnitPlatform()
 }
 
@@ -43,7 +43,7 @@ dependencies {
     testImplementation "com.codeborne:selenide:${selenideVersion}"
     testImplementation "io.qameta.allure:allure-selenide:${allureVersion}"
     testImplementation "com.github.javafaker:javafaker:1.0.2"
-    //testImplementation "ch.qos.logback:logback-classic:1.2.3"
+    testImplementation "ch.qos.logback:logback-classic:1.2.3"
 
     testImplementation "org.junit.jupiter:junit-jupiter-api:${junitVersion}"
     testRuntimeOnly "org.junit.jupiter:junit-jupiter-engine:${junitVersion}"
